Test and dependencies updated